rowsAnimation on mobile was fixed

--- a/frontend/components/MoviesRow/MoviesRow.module.scss
+++ b/frontend/components/MoviesRow/MoviesRow.module.scss
@@ -13,6 +13,10 @@
 
 .wrapper {
   @include onMobile {
-    min-height: 15rem;
+    min-height: 16rem;
+  }
+
+  @include onExtraSmallMobile {
+    min-height: 14rem;
   }
 }
